# Q-Scorer

./: AGENTS.md  LICENSE  README.md  pyproject.toml  quick_start.py  scorer.py
scripts/: eval_score.sh  infer_lora.sh  merge_lora_save.py  train_lora.sh
src/datasets/: pair_dataset.py  single_dataset.py  utils.py
src/evaluate/: cal_plcc_srcc.py  iqa_eval.py
src/model/: builder.py  configuration_mplug_owl2.py  deepmlp.py  modeling_llama2.py  modeling_mplug_owl2.py  visual_encoder.py
src/train/: mplug_owl2_trainer.py  train_mem.py
